[package]
name = "plurkcli"
version = "0.1.0"
authors = ["Dephilia <me@dephilia.moe>"]
edition = "2021"

[[bin]]
name = "plurk"
path = "src/main.rs"

[dependencies]
reqwest-oauth1 = "0.2.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde_qs = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
regex = "1.6.0"
chrono = "0.4.22"
oauth1-request = "0.6.0"
terminal_size = "0.2.1"
clap = { version = "4.0.*", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
